fix hero on tablet

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -728,6 +728,7 @@ footer {
 
     .hero-left {
         padding-left: 0 !important;
+        margin: auto !important;
     }
 
     .div {
